# taobao-tfs-mirror

branches/easy_dev/src/: Makefile.am
branches/stable-2.5.5/src/: Makefile.am
branches/tfs-rm-1.4.1/scripts/: Makefile.am
tags/release-2.6.2/src/: Makefile.am
trunk/: CONTRIBUTORS  Makefile.am  README  build.sh  configure.ac
trunk/conf/: cs.conf  ds.conf  tfs.conf
trunk/rpm/: tfs-build.sh
trunk/scripts/: Makefile.am  stfs.sh  tfs.sh
trunk/sql/: Makefile.am
trunk/sql/ns/: create_family.sql  seq_simulator.sql
trunk/sql/rcs/: create_table.sql
trunk/src/: Makefile.am
trunk/src/adminserver/: Makefile.am  adminserver.cpp  adminserver.h
trunk/src/checkserver/: Makefile.am  check_manager.cpp  check_manager.h  checkserver.cpp  default_server_helper.cpp  default_server_helper.h
trunk/src/client/: Makefile.am  fsname.cpp  tfs_client_api.cpp  tfs_client_api.h  tfs_file.cpp  tfs_file.h  tfs_session.cpp
trunk/src/clientv2/: Makefile.am  client_config.cpp  client_config.h  tair_cache_helper.cpp  tfs_client_api_v2.cpp  tfs_client_api_v2.h  tfs_client_impl_v2.cpp  tfs_client_impl_v2.h  tfs_cluster_manager.h  tfs_file.cpp  tfs_file.h  tfs_kv_meta_client_api.h  tfs_kv_meta_client_impl.cpp  tfs_meta_manager.h  tfs_rc_client_api.h  tfs_rc_client_api_impl.cpp  tfs_rc_client_api_impl.h  tfs_rc_helper.cpp  tfs_session.cpp  tfs_session.h  tfs_session_pool.cpp  tfs_session_pool.h
trunk/src/common/: Makefile.am  array_helper.h  base_packet.h  cdefine.h  config_item.h  define.h  directory_op.cpp  directory_op.h  error_msg.h  file_opv2.cpp  file_queue.cpp  file_queue.h  file_queue_thread.h  func.cpp  func.h  internal.cpp  internal.h  kv_meta_define.h  lock.cpp  new_client.cpp  parameter.cpp  parameter.h  stream.h  tfs_vector.ipp
trunk/src/dataserver/: Makefile.am  aop_manager.cpp  aop_manager.h  aop_meta.cpp  aop_meta.h  block_checker.cpp  block_manager.cpp  block_manager.h  blockfile_manager.cpp  blockfile_manager.h  check_manager.cpp  check_manager.h  client_request_server.cpp  client_request_server.h  compact_block.cpp  data_file.h  data_handle.cpp  data_handle.h  data_helper.cpp  data_helper.h  data_management.cpp  data_management.h  data_manager.cpp  dataserver.cpp  dataserver_define.h  dataservice.cpp  dataservice.h  ds_define.cpp  ds_define.h  erasure_code.cpp  erasure_code.h  file_op.cpp  file_op.h  file_repair.cpp  index_handle.cpp  index_handle.h  index_handlev2.cpp  index_handlev2.h  lease_manager.cpp  lease_manager.h  (+33 more)
trunk/src/kv_meta_server/: Makefile.am  kv_meta_service.cpp  meta_info_helper.cpp  tairengine_helper.cpp
trunk/src/message/: Makefile.am  admin_cmd_message.cpp  admin_cmd_message.h  async_client.cpp  base_task_message.h  block_info_message.cpp  block_info_message.h  block_info_message_v2.cpp  client.cpp  client.h  client_cmd_message.h  client_pool.h  close_file_message.h  close_file_message_v2.cpp  close_file_message_v2.h  compact_block_message.cpp  compact_block_message.h  dataserver_message.cpp  dataserver_message.h  dataserver_task_message.cpp  dataserver_task_message.h  ds_lease_message.cpp  ds_lease_message.h  erasure_code_message.cpp  erasure_code_message.h  get_dataserver_all_blocks_header.cpp  heart_message.cpp  heart_message.h  message.h  message_factory.cpp  message_factory.h  migrate_ds_heart_message.cpp  rc_session_message.cpp  read_data_message.cpp  read_data_message.h  read_data_message_v2.h  reload_message.h  replicate_block_message.cpp  replicate_block_message.h  resolve_block_version_conflict_message.cpp  (+10 more)
trunk/src/migrateserver/: Makefile.am  migrate_manager.cpp  migrate_manager.h  migrateserver.cpp  migrateserver.h  ms_define.cpp  ms_define.h
trunk/src/monitor/: Makefile.am  nameserver_ha_monitor.cpp
trunk/src/name_meta_server/: meta_hash_helper.h  meta_server_service.cpp  meta_store_manager.cpp  mysql_database_helper.h
trunk/src/nameserver/: Makefile.am  block_chunk.h  block_collect.cpp  block_collect.h  block_manager.cpp  block_manager.h  client_request_server.cpp  client_request_server.h  compact.cpp  compact.h  database_helper.cpp  database_helper.h  family_collect.cpp  family_collect.h  family_manager.cpp  family_manager.h  file_system_image.cpp  file_system_image.h  global_factory.h  heart_manager.cpp  heart_manager.h  layout_manager.cpp  layout_manager.h  lease_clerk.cpp  lease_clerk.h  meta_manager.cpp  meta_manager.h  meta_scanner.h  nameserver.cpp  nameserver.h  ns_define.cpp  ns_define.h  oplog.cpp  oplog.h  oplog_sync_manager.cpp  oplog_sync_manager.h  redundant.cpp  replicate.h  scanner_manager.cpp  scanner_manager.h  (+11 more)
trunk/src/new_client/: Makefile.am  client_config.cpp  local_key.cpp  local_key.h  tair_cache_helper.cpp  tair_cache_helper.h  tfs_client_impl.cpp  tfs_client_impl.h  tfs_file.cpp  tfs_kv_meta_client_impl.cpp  tfs_kv_meta_client_impl.h  tfs_kv_meta_helper.h  tfs_large_file.cpp  tfs_meta_helper.h  tfs_rc_client_api.cpp  tfs_rc_client_api.h  tfs_rc_client_api_impl.cpp  tfs_rc_client_api_impl.h  tfs_rc_helper.cpp  tfs_session.cpp  tfs_session.h
trunk/src/rcserver/: Makefile.am  rc_service.cpp  rc_service.h  resource_manager.cpp
trunk/src/requester/: Makefile.am  ns_requester.cpp  ns_requester.h
trunk/src/tools/: Makefile.am
trunk/tests/: Makefile.am
trunk/tests/TestFrame/: Makefile
trunk/tests/batch/: Makefile.am  test_batch_mix.cpp  test_batch_read.cpp  test_batch_write.cpp  thread.h  util.cpp  util.h
trunk/tests/client/: Makefile.am
trunk/tests/clientv2/: Makefile.am  test_save_fetch.cpp
trunk/tests/dataserver/: Makefile.am  test_blockfile_manager.cpp  test_check_manager.cpp  test_index_handle.cpp  test_lease_manager.cpp  test_logic_block.cpp  test_logic_block_and_compact.cpp  test_meta.cpp  test_mmap_file.cpp  test_physical_block.cpp  test_writable_block.cpp  test_writable_block_manager.cpp
trunk/tests/intergrate/: Makefile.am  tfs_ioapi_cases.cpp  tfs_ioapi_cases.h
trunk/tests/kv_meta_server/: test_meta_info_helper.h
trunk/tests/nameserver/: Makefile.am  test_database_helper.cpp  test_family_manager.cpp  test_layout_manager.cpp  test_task.cpp  (+3 more)
trunk/tfs-1.4.0/: Makefile.am
(+5765 files in other folders)
